[package]
name = "cripto-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
rusty-money = { version = "0.4.0", features = ["iso"] }